# iodine_storage

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  install_openssl_win.sh  install_openssl_win_path
migrations/2019-01-27-152730_create_users/: up.sql
src/: authentication.rs  database.rs  main.rs  resources.rs  responses.rs  s3.rs
src/authentication/: authentication.rs  enums.rs  invites.rs  jsonwebtoken.rs  login.rs  register.rs  verify_token.rs
src/database/: connection.rs  database.rs  models.rs  schema.rs  setup.rs
src/resources/: api.rs  authentication.rs
src/responses/: enums.rs
src/s3/: connection.rs
