[package]
name = "iodine_storage"
version = "0.0.30"
authors = ["okrplay <32576280+okrplay@users.noreply.github.com>"]
edition = "2018"
license= "ISC"

[dependencies]
bcrypt = "0.3"
dotenv = "0.13"
biscuit = "0.2"
http = "0.1"
rusoto_core = "0.36"
rusoto_s3 = "0.36"
serde = "1.0"
serde_json = "1.0"
sofa = { git = "https://github.com/danieleades/sofa.git", rev = "11922d9e4acf94f63d762a57f631aa2888446d0f" }
tower-web = "0.3"